[project]
name = "odds-dashboard"
version = "1.0.0"
description = "Multi-bookmaker odds comparison dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "playwright==1.49.0",
    "requests==2.32.3",
    "apscheduler==3.10.4",
    "aiohttp==3.11.11",
    "python-multipart==0.0.9",
    "PyJWT==2.8.0",
    "bcrypt==4.1.2",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=4.0",
    "httpx==0.27.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "D", "RET", "T20", "Q"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["settings", "middleware", "merge", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests that require live scraper connections",
]

[tool.coverage.run]
omit = ["test_*.py", "docs/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
